@startuml

title __SRC's Class Diagram__\n

  package  {
    class CoulombsLaw {
        - force : double
        - q1 : double
        - q2 : double
        - r : double
        - k : double
        - choice : int
        + CoulombsLaw()
        + showMenu()
        + showPrompt()
        + showResult()
        - computeForce()
        - computeQ1()
        - computeQ2()
        - computeDistance()
        + readInput()
        + getChoice()
        + setChoice()
        + getQ1()
        + setQ1()
        + getQ2()
        + setQ2()
        + getR()
        + setR()
        + getForce()
        + setForce()
        + getK()
    }
  }
  

  package  {
    class Main {
        + run()
        {static} + main()
    }
  }
  

  package  {
    class VolumeFormula {
        - volume : double
        - length : double
        - width : double
        - height : double
        - choice : int
        + VolumeFormula()
        + showMenu()
        + showPrompt()
        + showResult()
        + readInput()
        + getVolume()
        + setVolume()
        + getLength()
        + setLength()
        + getWidth()
        + setWidth()
        + getHeight()
        + setHeight()
        + getChoice()
        + setChoice()
        - computeVolume()
        - computeLength()
        - computeWidth()
        - computeHeight()
    }
  }
  

  Main -up-|> ConsoleProgram
  Main o-- VolumeFormula : volumeFormula
  Main o-- CoulombsLaw : coulombsFormula
  AccessibleJApplet -up-|> AccessibleApplet
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleApplet -up-|> AccessibleAWTPanel
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTPanel -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  WakingRunnable -up-|> Runnable
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  BltBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  DummyRequestFocusController -up-|> RequestFocusController
  FlipBufferStrategy -up-|> BufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  SingleBufferStrategy -up-|> BufferStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
